website/versioned_docs/version-57.1.0/reference/generated/api/variables/terrenoStatements.md
> `const` **terrenoStatements**: `object`

## Type Declaration

### admin

> `readonly` **admin**: readonly \[`"access"`, `"runScripts"`, `"viewBackgroundTasks"`\]

### configuration

> `readonly` **configuration**: readonly \[`"read"`, `"update"`\]

### consentForm

> `readonly` **consentForm**: readonly \[`"create"`, `"list"`, `"read"`, `"update"`, `"delete"`\] = `MODEL_CRUD`

### consentResponse

> `readonly` **consentResponse**: readonly \[`"list"`, `"read"`\]

### featureFlag

> `readonly` **featureFlag**: readonly \[`"create"`, `"list"`, `"read"`, `"update"`, `"delete"`\] = `MODEL_CRUD`

### rbac

> `readonly` **rbac**: readonly \[`"read"`, `"manageRoles"`, `"assignRoles"`\]

### user

> `readonly` **user**: readonly \[`"create"`, `"list"`, `"read"`, `"update"`, `"delete"`, `"impersonate"`, `"setPassword"`\]
