website/versioned_docs/version-57.2.0/reference/generated/api/variables/terrenoStatements.md
> `const` **terrenoStatements**: `object`

## Type Declaration

### admin

> `readonly` **admin**: readonly \[`"access"`, `"runScripts"`, `"viewBackgroundTasks"`\]

### adminConsentForm

> `readonly` **adminConsentForm**: readonly \[`"read"`, `"write"`, `"writeOwned"`\] = `ADMIN_MODEL_ACCESS`

### adminConsentResponse

> `readonly` **adminConsentResponse**: readonly \[`"read"`, `"write"`, `"writeOwned"`\] = `ADMIN_MODEL_ACCESS`

### adminFeatureFlag

> `readonly` **adminFeatureFlag**: readonly \[`"read"`, `"write"`, `"writeOwned"`\] = `ADMIN_MODEL_ACCESS`

### configuration

> `readonly` **configuration**: readonly \[`"read"`, `"update"`\]

### consentForm

> `readonly` **consentForm**: readonly \[`"create"`, `"list"`, `"read"`, `"update"`, `"delete"`\] = `MODEL_CRUD`

### consentResponse

> `readonly` **consentResponse**: readonly \[`"list"`, `"read"`\]

### featureFlag

> `readonly` **featureFlag**: readonly \[`"create"`, `"list"`, `"read"`, `"update"`, `"delete"`\] = `MODEL_CRUD`

### rbac

> `readonly` **rbac**: readonly \[`"read"`, `"manageRoles"`, `"assignRoles"`\]

### user

> `readonly` **user**: readonly \[`"create"`, `"list"`, `"read"`, `"update"`, `"delete"`, `"impersonate"`, `"setPassword"`\]
